--- a/ubuntu/lib/DEBIAN/control.tt
+++ b/ubuntu/lib/DEBIAN/control.tt
@@ -1,8 +1,8 @@
-Package: rasttk
+Package: [% package %]
 Version: [% version %]
 Section: Science
 Priority: optional
 Architecture: all
 Depends: [% deps_str %]
 Maintainer: Robert Olson <olson@mcs.anl.gov>
-Description: The RAST toolkit
+Description: [% description %]
